--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flix</title>
   </head>
-  <body class="no-scrollbar">
+  <body class="no-scrollbar" style="background-color: #0F172A;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
